# LlamaPack

./: .gitignore  Modelfile
app/: Cargo.toml
app/src/: embedder.rs  lib.rs  main.rs  ollama_client.rs
app/src/lancedb/: lancedb_client.rs  mod.rs  schema.rs
app/tests/: embedder_tb.rs  lancedb_tb.rs
cli_manager/: Cargo.toml  Modelfile
cli_manager/.coder_sessions/044a8475-8795-4f76-ad6a-589e631e4bcb/: session.json
cli_manager/.coder_sessions/0f55db24-092d-4408-bb3f-1373734e8a4c/: session.json
cli_manager/.coder_sessions/2a310b5c-d931-4294-8969-a5eafa8a2c29/: session.json
cli_manager/.coder_sessions/541a0589-b85e-42aa-90f7-47a16e48bf92/: session.json
cli_manager/.coder_sessions/aeec6e01-337f-4390-b9b9-c3862df3b5a3/: session.json
cli_manager/.coder_sessions/d4742f39-17b2-4592-b089-92600a3646ca/: session.json
cli_manager/src/: main.rs  ollama_client.rs  session.rs
models/UniXcoder/: get_unixcoder.py  requirements.txt
