[package]
name = "llama_pack"
version = "0.1.0"
edition = "2021"

[lib]
name = "llama_pack"
path = "src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "llama_pack"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
indicatif = "0.17"
ort = "2.0.0-rc.10"
tokenizers = "0.20"
anyhow = "1.0"
ndarray = "0.16"
lancedb = "0.21.1"
arrow-schema = "55.2.0"
arrow-array = "55.2.0"
tokio = "1.46.1"
arrow-buffer = "55.2.0"
futures = "0.3.31"

[dev-dependencies]
tempfile = "3.0"
tokio = { version = "1.46.1", features = ["test-util", "macros", "rt"] }
